@@ -711,6 +711,8 @@ public class JedisConnectionFactory
 			this.clientConfiguration.getSslParameters().ifPresent(builder::sslParameters);
 		}
 
+		this.clientConfiguration.getCustomizer().ifPresent(customizer -> customizer.customize(builder));
+
 		return builder.build();
 	}
 
@@ -1003,7 +1005,7 @@ public class JedisConnectionFactory
 					return jedis;
 				}
 			} catch (Exception ex) {
-				log.warn(String.format("Ping failed for sentinel host: %s", node.getHost()), ex);
+				log.warn("Ping failed for sentinel host: %s".formatted(node.getHost()), ex);
 			} finally {
 				if (!success && jedis != null) {
 					jedis.close();
@@ -1040,8 +1042,8 @@ public class JedisConnectionFactory
 	private MutableJedisClientConfiguration getMutableConfiguration() {
 
 		Assert.state(clientConfiguration instanceof MutableJedisClientConfiguration,
-				() -> String.format("Client configuration must be instance of MutableJedisClientConfiguration but is %s",
-						ClassUtils.getShortName(clientConfiguration.getClass())));
+				() -> "Client configuration must be instance of MutableJedisClientConfiguration but is %s"
+						.formatted(ClassUtils.getShortName(clientConfiguration.getClass())));
 
 		return (MutableJedisClientConfiguration) clientConfiguration;
 	}
@@ -1056,10 +1058,10 @@ public class JedisConnectionFactory
 
 		switch (current) {
 			case CREATED, STOPPED -> throw new IllegalStateException(
-					String.format("JedisConnectionFactory has been %s. Use start() to initialize it", current));
+					"JedisConnectionFactory has been %s. Use start() to initialize it".formatted(current));
 			case DESTROYED ->
 				throw new IllegalStateException("JedisConnectionFactory was destroyed and cannot be used anymore");
-			default -> throw new IllegalStateException(String.format("JedisConnectionFactory is %s", current));
+			default -> throw new IllegalStateException("JedisConnectionFactory is %s".formatted(current));
 		}
 	}
 
@@ -1085,6 +1087,11 @@ public class JedisConnectionFactory
 			MutableJedisClientConfiguration configuration = new MutableJedisClientConfiguration();
 			configuration.setPoolConfig(jedisPoolConfig);
 			return configuration;
+		}
+
+		@Override
+		public Optional<JedisClientConfigBuilderCustomizer> getCustomizer() {
+			return Optional.empty();
 		}
 
 		@Override
